// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AvatarInput /> renders empty field with error: image is required 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth AvatarInput-root-15 css-q8hpuo-MuiFormControl-root"
  >
    <label
      class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary css-d6jbqa-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      id="avatar-select-label"
    >
      Avatar
    </label>
    <div
      class="MuiGrid-root MuiGrid-container AvatarInput-container-16 css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="InputFile-placeholder-19"
          tabindex="0"
        >
          <input
            accept="image/jpeg,image/png"
            autocomplete="off"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium InputFile-icon-20 css-i4bv87-MuiSvgIcon-root"
            data-testid="CloudUploadIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
            />
          </svg>
        </div>
        <p
          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1wc848c-MuiFormHelperText-root"
          id="avatar-helper-text"
        >
          Avatar is required
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AvatarInput /> renders image with error from server 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth AvatarInput-root-11 css-q8hpuo-MuiFormControl-root"
  >
    <label
      class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary css-d6jbqa-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      id="avatar-select-label"
    >
      Avatar
    </label>
    <button
      aria-label="delete"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium AvatarInput-button-13 css-1i8snpa-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
        data-testid="DeleteIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <img
      alt="Avatar"
      class="AvatarInput-image-14"
      src="https://lms2-dev.s3-us-west-2.amazonaws.com/7f0f427f-eeba-4ffb-a1c8-f730721bfd46.jpeg"
    />
    <p
      class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained css-1wc848c-MuiFormHelperText-root"
      id="avatar-helper-text"
    >
      Property Avatar is not recognized
    </p>
  </div>
</DocumentFragment>
`;

exports[`<AvatarInput /> renders the empty field 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth AvatarInput-root-1 css-q8hpuo-MuiFormControl-root"
  >
    <label
      class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary css-d6jbqa-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      id="avatar-select-label"
    >
      Avatar
    </label>
    <div
      class="MuiGrid-root MuiGrid-container AvatarInput-container-2 css-11lq3yg-MuiGrid-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="InputFile-placeholder-5"
          tabindex="0"
        >
          <input
            accept="image/jpeg,image/png"
            autocomplete="off"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium InputFile-icon-6 css-i4bv87-MuiSvgIcon-root"
            data-testid="CloudUploadIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96zM14 13v4h-4v-4H7l5-5 5 5h-3z"
            />
          </svg>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<AvatarInput /> renders the field with image 1`] = `
<DocumentFragment>
  <div
    class="MuiFormControl-root MuiFormControl-fullWidth AvatarInput-root-7 css-q8hpuo-MuiFormControl-root"
  >
    <label
      class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary css-d6jbqa-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      id="avatar-select-label"
    >
      Avatar
    </label>
    <button
      aria-label="delete"
      class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeMedium AvatarInput-button-9 css-1i8snpa-MuiButtonBase-root-MuiIconButton-root"
      data-mui-internal-clone-element="true"
      tabindex="0"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit css-1vooibu-MuiSvgIcon-root"
        data-testid="DeleteIcon"
        focusable="false"
        viewBox="0 0 24 24"
      >
        <path
          d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
        />
      </svg>
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
    <img
      alt="Avatar"
      class="AvatarInput-image-10"
      src="https://lms2-dev.s3-us-west-2.amazonaws.com/7f0f427f-eeba-4ffb-a1c8-f730721bfd46.jpeg"
    />
  </div>
</DocumentFragment>
`;
